# Plotter

./: .gitignore  README.md  auto_install.sh  windows_install.bat
lib/: run.bat
src/: CMakeLists.txt  Plotter.c  Plotter.cpp  Plotter.h  Plotter_fragment_default.glsl  Plotter_vertex_default.glsl  util.c  util.cpp  util.h
